styles/tasks.css
.filter-button {
  background: none;
}

.filter-button:hover {
  cursor: pointer;
}

.filter-button__text {
  display: none;
}

.new-task-button {
  background: none;
}

.new-task-button:hover {
  cursor: pointer;
}

.new-task-button__text {
  display: none;
}

.tasks-table {
  width: 100%;
}

.tasks-table__head {
  display: none;
}

.tasks-table__body {
  display: grid;
  justify-content: center;
  justify-items: center;
  grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
  gap: 1.5rem;
}

.tasks-table-row {
  display: flex;
  flex-direction: column;
  border-radius: 15px;
  border: 1px solid var(--FG-COLOR);
  width: 18.75rem;
}

.tasks-table-row__data {
  display: grid;
  grid-template-columns: 1fr 4fr;
  gap: 0.5rem;
  border-bottom: 1px solid var(--FG-COLOR);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  justify-content: center;
  align-content: center;
  font-weight: 600;
}

.tasks-table-row__data::before {
  content: attr(data-label);
  color: var(--LIGHT-GRAY-COLOR);
  font-weight: 400;
}

.tasks-table-row__data:last-child {
  border-bottom: none;
}

.task__name {
  border-bottom: 1px solid var(--FG-COLOR);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  font-size: 1.25rem;
  font-weight: 500;
  white-space: nowrap;
}

.task__status--open {
  color: #ff5964;
}

.task__status--in-progress {
  color: #e3b505;
}

.task__status--done {
  color: #7bc950;
}

.task__time-left {
  font-style: italic;
}

.footer {
  padding-inline: 0.5rem;
  grid-area: footer;
  justify-self: center;
  max-width: 82rem;
  width: 100%;
}

.paginator {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.paginator__button {
  border-radius: 15px;
  border: 1px solid var(--FG-COLOR);
  background: none;
  padding: 0.5rem;
  font-size: 1rem;
  color: var(--FG-COLOR);
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 800;
}

.paginator__button:hover {
  cursor: pointer;
}

.paginator__button--active {
  color: var(--RED-CONTRAST-COLOR);
}

@media screen and (min-width: 426px) {
  .search__input {
    max-width: 7rem;
  }
}

@media screen and (min-width: 592px) {
  .filter-button__text {
    display: block;
  }

  .new-task-button__text {
    display: block;
  }
}

@media screen and (min-width: 1025px) {
  .tasks-table {
    border: 1px solid var(--FG-COLOR);
    border-radius: 15px;
  }

  .tasks-table__head {
    display: table-header-group;
  }

  .tasks-table__body {
    display: table-row-group;
  }

  .tasks-table-row {
    display: table-row;
    border-right: 1px solid var(--FG-COLOR);
    border-bottom: 1px solid var(--FG-COLOR);
  }

  .tasks-table-row:last-child {
    border-bottom: none;
  }

  .tasks-table-row__header {
    font-size: 1.5rem;
    font-weight: 500;
    padding-inline: 0.75rem;
    padding-block: 0.5rem;
    text-align: start;
    border-bottom: 1px solid var(--FG-COLOR);
    border-right: 1px solid var(--FG-COLOR);
  }

  .tasks-table-row__header:last-child {
    border-right: none;
  }

  .tasks-table-row__data {
    font-size: 1.25rem;
    display: table-cell;
    border-bottom: inherit;
    border-right: inherit;
    font-weight: 400;
  }

  .tasks-table-row__data::before {
    display: none;
  }

  .tasks-table-row__data:last-child {
    border-right: none;
    border-bottom: inherit;
  }

  .task__name {
    font-size: 1.25rem;
    font-weight: 400;
    border-right: inherit;
    border-bottom: inherit;
  }

  .task__name:last-of-type {
    color: red;
  }
}

